syntax ="proto3";

package items;

option go_package = ".;itemspb";

message ViewItem{
    string ID=1;
    string Title=2;
    int64 Price=3;
}
message CreateItemRequest{
    string Seller=1;
    string Name=2;
    string Description=3;
    int64 Price=4;
    int64 AvailableQuantity=5;
}

message CreateItemResposne{
    string id=1;
    string Seller=2;
    string Title=3;
    string Description=4;
    int64 Price=5;
    int64 AvailableQuantity=6;
    string Status=7;
    int64 QuantitySold=8;
}

message GetItemRequest{
    string ID=1;
}

message GetItemResposne{
    ViewItem item=1;
}
message SearchItemRequest{
    string name=1;
}

message SearchItemResponse{
    ViewItem item=1;
}

message UpdateItemRequest{
    string itemID=1;
    string Name=2;
    string Description=3;
    int64 Price=4;
    int64 AvailableQuantity=5;
    string userID=6;
}
message UpdateItemResponse{
    string itemID=1;
    string Seller=2;
    string Title=3;
    string Description=4;
    int64 Price=5;
    int64 AvailableQuantity=6;
    string Status=7;
    int64 QuantitySold=8;
}

message DeleteItemRequest{
    string userID=1;
    string ItemID=2;
}
message DeleteItemResponse{
    string message=1;
}
message BuyItemRequest{
    string itemID=1;
    string userID=2;
}
message BuyItemResponse{
    string ExceptedDateOfDilvery=1;
    string Title=2;
    string houseNO=3;
    string street=4;
    string state=5;
    string country=6;
    int64 Price=7;
}
message SellerViewRequest{
    string userID=1;
    string itemID=2;
}
message SellerViewRespsonse{
    string id=1;
    string Seller=2;
    string Title=3;
    string Description=4;
    int64 Price=5;
    int64 AvailableQuantity=6;
    string Status=7;
    int64 QuantitySold=8;
}

message CheckoutRequest{
    string itemID=1;
}
message CheckOutResponse{
    string Title=1;
    string ExceptedDateOfDilvery=2;
    int64 price=3;
}

service ItemService{
    rpc Create(CreateItemRequest) returns (CreateItemResposne);
    rpc Get(GetItemRequest) returns (GetItemResposne);
    rpc Update(UpdateItemRequest) returns (UpdateItemResponse);
    rpc Delete(DeleteItemRequest) returns (DeleteItemResponse);
    rpc Buy(BuyItemRequest) returns (BuyItemResponse);
    rpc SellerView(SellerViewRequest) returns (SellerViewRespsonse);
    rpc SearchItem (SearchItemRequest) returns (stream SearchItemResponse);
    rpc CheckOut (CheckoutRequest)returns (CheckOutResponse);
}